# cclassify

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
docs/: index.md
notebooks/: benchmark_vs_sklearn.ipynb
src/cclassify/: __init__.py  _knn.c  _knn.pyx  _logistic.c  _logistic.pyx  _naive_bayes.c  _naive_bayes.pyx  knn.py  logistic.py  naive_bayes.py
src/cclassify/csrc/: knn.c  knn.h  logistic.c  logistic.h  naive_bayes.c  naive_bayes.h
tests/: test_knn.py  test_logistic.py  test_naive_bayes.py
